# client-basic

./: Cargo.toml  LICENSE  PKGBUILD  README.md  credentials.json  index.html  run.sh
src/: app.rs  lib.rs  main.rs  network.rs
src/app/: background_star.rs  camera.rs  controller_ffi.rs  controller_select.rs  controller_stdin.rs  controller_wasm.rs  particles.rs  sounds.rs
src/network/: desktop_network_client.rs  web_network_client.rs
worlds/: world_1134490333  world_1728082441
