[package]
name = "stellar-bit-client"
version = "0.1.0"
edition = "2021"
authors = ["Patrik Cihal"]
repository = "https://github.com/stellar-bit/client-basic"
license = "MIT"

[dependencies]
stellar-bit-core = { git="https://github.com/stellar-bit/core" }
stellar-bit-central-hub-api ={ git = "https://github.com/stellar-bit/central-hub-api" }
anyhow = "1.0.69"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
ellipsoid = { git = "https://github.com/patrik-cihal/ellipsoid" }
cfg-if = "1.0.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
rodio = "0.17.1"
serde = { version = "1", features = ["derive"] }
enum-bytes = {git = "https://github.com/patrik-cihal/enum-bytes"}

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.26"
futures = "0.3.26"
tokio = { version="1.28", features=["rt-multi-thread",] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.30"
wasm-bindgen = "0.2.84"
